parser/y.output

state 0
	$accept: .program $end 
	margin: .    (2)

	.  reduce 2 (src line 54)

	program  goto 1
	margin  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  margin.top margin 
	margin:  margin.NEWLINE 

	NEWLINE  shift 4
	NUM  shift 20
	IDENT  shift 15
	BOOL  shift 21
	IF  shift 11
	'\\'  shift 13
	'('  shift 22
	'['  shift 23
	.  error

	top  goto 3
	withdecls  goto 6
	withoutdecls  goto 5
	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	topexpr  goto 7
	abs  goto 9
	cmpexpr  goto 10
	decl  goto 12
	decls  goto 8

state 3
	program:  margin top.margin 
	margin: .    (2)

	.  reduce 2 (src line 54)

	margin  goto 24

state 4
	margin:  margin NEWLINE.    (3)

	.  reduce 3 (src line 54)


state 5
	top:  withoutdecls.    (4)

	.  reduce 4 (src line 56)


state 6
	top:  withdecls.    (5)

	.  reduce 5 (src line 56)


state 7
	withoutdecls:  topexpr.    (6)

	.  reduce 6 (src line 58)


state 8
	withdecls:  decls.newlines topexpr 
	decls:  decls.newlines decl 

	NEWLINE  shift 26
	.  error

	newlines  goto 25

state 9
	topexpr:  abs.    (13)

	.  reduce 13 (src line 94)


state 10
	topexpr:  cmpexpr.    (14)

	.  reduce 14 (src line 96)


state 11
	topexpr:  IF.cmpexpr THEN cmpexpr ELSE cmpexpr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	cmpexpr  goto 27

state 12
	decls:  decl.    (10)

	.  reduce 10 (src line 77)


state 13
	abs:  '\\'.IDENT RARROW topexpr 

	IDENT  shift 29
	.  error


state 14
	cmpexpr:  expr.    (17)
	cmpexpr:  expr.EQ expr 
	cmpexpr:  expr.NE expr 
	cmpexpr:  expr.'<' expr 
	cmpexpr:  expr.'>' expr 
	cmpexpr:  expr.LE expr 
	cmpexpr:  expr.GE expr 
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	EQ  shift 30
	NE  shift 31
	LE  shift 34
	GE  shift 35
	'<'  shift 32
	'>'  shift 33
	'+'  shift 36
	'-'  shift 37
	.  reduce 17 (src line 108)


15: shift/reduce conflict (shift 39(0), red'n 35(0)) on SYMBOL
state 15
	decl:  IDENT.'=' topexpr 
	decl:  IDENT.SYMBOL IDENT '=' topexpr 
	atom:  IDENT.    (35)

	SYMBOL  shift 39
	'='  shift 38
	.  reduce 35 (src line 177)


state 16
	expr:  term.    (24)
	term:  term.'*' factor1 
	term:  term.'/' factor1 

	'*'  shift 40
	'/'  shift 41
	.  reduce 24 (src line 135)


state 17
	term:  factor1.    (27)
	factor1:  factor1.SYMBOL factor 

	SYMBOL  shift 42
	.  reduce 27 (src line 146)


state 18
	factor1:  factor.    (30)
	factor:  factor.atom 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  reduce 30 (src line 157)

	atom  goto 43

state 19
	factor:  atom.    (32)

	.  reduce 32 (src line 165)


state 20
	atom:  NUM.    (34)

	.  reduce 34 (src line 172)


state 21
	atom:  BOOL.    (36)

	.  reduce 36 (src line 181)


state 22
	atom:  '('.topexpr ')' 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	IF  shift 11
	'\\'  shift 13
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	topexpr  goto 44
	abs  goto 9
	cmpexpr  goto 10

state 23
	atom:  '['.']' 

	']'  shift 45
	.  error


state 24
	program:  margin top margin.    (1)
	margin:  margin.NEWLINE 

	NEWLINE  shift 4
	.  reduce 1 (src line 45)


state 25
	withdecls:  decls newlines.topexpr 
	decls:  decls newlines.decl 

	NUM  shift 20
	IDENT  shift 15
	BOOL  shift 21
	IF  shift 11
	'\\'  shift 13
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	topexpr  goto 46
	abs  goto 9
	cmpexpr  goto 10
	decl  goto 47

state 26
	newlines:  NEWLINE.margin 
	margin: .    (2)

	.  reduce 2 (src line 54)

	margin  goto 48

state 27
	topexpr:  IF cmpexpr.THEN cmpexpr ELSE cmpexpr 

	THEN  shift 49
	.  error


state 28
	atom:  IDENT.    (35)

	.  reduce 35 (src line 177)


state 29
	abs:  '\\' IDENT.RARROW topexpr 

	RARROW  shift 50
	.  error


state 30
	cmpexpr:  expr EQ.expr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 51
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 31
	cmpexpr:  expr NE.expr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 52
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 32
	cmpexpr:  expr '<'.expr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 53
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 33
	cmpexpr:  expr '>'.expr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 54
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 34
	cmpexpr:  expr LE.expr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 55
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 35
	cmpexpr:  expr GE.expr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 56
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 36
	expr:  expr '+'.term 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	term  goto 57
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 37
	expr:  expr '-'.term 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	term  goto 58
	factor  goto 18
	factor1  goto 17
	atom  goto 19

state 38
	decl:  IDENT '='.topexpr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	IF  shift 11
	'\\'  shift 13
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	topexpr  goto 59
	abs  goto 9
	cmpexpr  goto 10

state 39
	decl:  IDENT SYMBOL.IDENT '=' topexpr 

	IDENT  shift 60
	.  error


state 40
	term:  term '*'.factor1 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	factor  goto 18
	factor1  goto 61
	atom  goto 19

state 41
	term:  term '/'.factor1 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	factor  goto 18
	factor1  goto 62
	atom  goto 19

state 42
	factor1:  factor1 SYMBOL.factor 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	factor  goto 63
	atom  goto 19

state 43
	factor:  factor atom.    (33)

	.  reduce 33 (src line 167)


state 44
	atom:  '(' topexpr.')' 

	')'  shift 64
	.  error


state 45
	atom:  '[' ']'.    (38)

	.  reduce 38 (src line 189)


state 46
	withdecls:  decls newlines topexpr.    (7)

	.  reduce 7 (src line 64)


state 47
	decls:  decls newlines decl.    (9)

	.  reduce 9 (src line 72)


state 48
	margin:  margin.NEWLINE 
	newlines:  NEWLINE margin.    (8)

	NEWLINE  shift 4
	.  reduce 8 (src line 70)


state 49
	topexpr:  IF cmpexpr THEN.cmpexpr ELSE cmpexpr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	cmpexpr  goto 65

state 50
	abs:  '\\' IDENT RARROW.topexpr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	IF  shift 11
	'\\'  shift 13
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	topexpr  goto 66
	abs  goto 9
	cmpexpr  goto 10

state 51
	cmpexpr:  expr EQ expr.    (18)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 36
	'-'  shift 37
	.  reduce 18 (src line 110)


state 52
	cmpexpr:  expr NE expr.    (19)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 36
	'-'  shift 37
	.  reduce 19 (src line 114)


state 53
	cmpexpr:  expr '<' expr.    (20)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 36
	'-'  shift 37
	.  reduce 20 (src line 118)


state 54
	cmpexpr:  expr '>' expr.    (21)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 36
	'-'  shift 37
	.  reduce 21 (src line 122)


state 55
	cmpexpr:  expr LE expr.    (22)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 36
	'-'  shift 37
	.  reduce 22 (src line 126)


state 56
	cmpexpr:  expr GE expr.    (23)
	expr:  expr.'+' term 
	expr:  expr.'-' term 

	'+'  shift 36
	'-'  shift 37
	.  reduce 23 (src line 130)


state 57
	expr:  expr '+' term.    (25)
	term:  term.'*' factor1 
	term:  term.'/' factor1 

	'*'  shift 40
	'/'  shift 41
	.  reduce 25 (src line 137)


state 58
	expr:  expr '-' term.    (26)
	term:  term.'*' factor1 
	term:  term.'/' factor1 

	'*'  shift 40
	'/'  shift 41
	.  reduce 26 (src line 141)


state 59
	decl:  IDENT '=' topexpr.    (11)

	.  reduce 11 (src line 82)


state 60
	decl:  IDENT SYMBOL IDENT.'=' topexpr 

	'='  shift 67
	.  error


state 61
	term:  term '*' factor1.    (28)
	factor1:  factor1.SYMBOL factor 

	SYMBOL  shift 42
	.  reduce 28 (src line 148)


state 62
	term:  term '/' factor1.    (29)
	factor1:  factor1.SYMBOL factor 

	SYMBOL  shift 42
	.  reduce 29 (src line 152)


state 63
	factor1:  factor1 SYMBOL factor.    (31)
	factor:  factor.atom 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  reduce 31 (src line 159)

	atom  goto 43

state 64
	atom:  '(' topexpr ')'.    (37)

	.  reduce 37 (src line 185)


state 65
	topexpr:  IF cmpexpr THEN cmpexpr.ELSE cmpexpr 

	ELSE  shift 68
	.  error


state 66
	abs:  '\\' IDENT RARROW topexpr.    (16)

	.  reduce 16 (src line 102)


state 67
	decl:  IDENT SYMBOL IDENT '='.topexpr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	IF  shift 11
	'\\'  shift 13
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	topexpr  goto 69
	abs  goto 9
	cmpexpr  goto 10

state 68
	topexpr:  IF cmpexpr THEN cmpexpr ELSE.cmpexpr 

	NUM  shift 20
	IDENT  shift 28
	BOOL  shift 21
	'('  shift 22
	'['  shift 23
	.  error

	expr  goto 14
	term  goto 16
	factor  goto 18
	factor1  goto 17
	atom  goto 19
	cmpexpr  goto 70

state 69
	decl:  IDENT SYMBOL IDENT '=' topexpr.    (12)

	.  reduce 12 (src line 87)


state 70
	topexpr:  IF cmpexpr THEN cmpexpr ELSE cmpexpr.    (15)

	.  reduce 15 (src line 97)


29 terminals, 17 nonterminals
39 grammar rules, 71/8000 states
1 shift/reduce, 0 reduce/reduce conflicts reported
66 working sets used
memory: parser 129/120000
49 extra closures
165 shift entries, 1 exceptions
40 goto entries
85 entries saved by goto default
Optimizer space used: output 96/120000
96 table entries, 4 zero
maximum spread: 29, maximum offset: 68
